added header html content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">
+        Header logo
+        <div class="links">
+            <li>
+                <ul>header link one</ul>
+                <ul>header link two</ul>
+                <ul>header link three</ul>
+            </li>
+           
+
+        </div>
+
+
+    </div>
 </body>
 </html>
