created the header in css, changed font, color, and made it into a flex container for the first part of the first section

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="section1">
+
+
     <div class="header">
-        Header logo
-        <div class="links">
+        <div class="logo"> Header logo </div>
+        <div class="header-links">
             <li>
                 <ul>header link one</ul>
                 <ul>header link two</ul>
                 <ul>header link three</ul>
             </li>
-           
-
+        </div>
         </div>
 
 
