--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
             </li>
         </div>
         </div>
+<div class="body1">   
+     <div class="body-left">
+  <div class="hero-main"> This website is awesome</div>
+  <div class=" hero-sub"> This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
+</div>
 
+<div class="empty">
+this is a placeholder for an image
+</div>
+</div>
 
     </div>
 </body>
