--- a/index.html
+++ b/index.html
@@ -33,5 +33,33 @@ this is a placeholder for an image
 </div>
 
     </div>
+
+    <div class="section2">
+        <div class="header2">Some random information</div>
+        <div class="square-container">
+            
+            <div class="square"><div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="square"><div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="square"><div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="square"><div class="text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+    </div>
 </body>
+
+
+
 </html>
