still figuring out how to align the text to the bottom of each square. Just making a commit of the current state of my work.

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ this is a placeholder for an image
         <div class="header2">Some random information</div>
         <div class="square-container">
             
-            <div class="square"><div class="text">this is some subtext under an illustration or image</div>
+            <div class="square1"><div class="text">this is some subtext under an illustration or image</div>
             </div>
-            <div class="square"><div class="text">this is some subtext under an illustration or image</div>
+            <div class="square2"><div class="text">this is some subtext under an illustration or image</div>
             </div>
-            <div class="square"><div class="text">this is some subtext under an illustration or image</div>
+            <div class="square3"><div class="text">this is some subtext under an illustration or image</div>
             </div>
-            <div class="square"><div class="text">this is some subtext under an illustration or image</div>
+            <div class="square4"><div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
