--- a/index.html
+++ b/index.html
@@ -67,16 +67,27 @@ this is a placeholder for an image
         </div>
 
 
+    <div class="section3">
+      <div class="box3">
+         <div class="quote">
+             This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. 
+         </div>
+         <div class="speaker">-Thor, God of Thunder</div>
 
 
-            <!-- <div class="square1"><div class="text">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="square2"><div class="text">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="square3"><div class="text">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="square4"><div class="text">this is some subtext under an illustration or image</div>
-            </div> -->
+      </div>
+
+
+
+
+
+
+    </div>
+
+
+
+
+           
         </div>
     </div>
 
