initial estimation of how the html will work for section 4

--- a/index.html
+++ b/index.html
@@ -77,13 +77,33 @@ this is a placeholder for an image
 
       </div>
 
+    </div>
 
+    <div class="section4">
+        <div class="r-box">
+            <div class="things">
+                <div class="left">
+                    <div class="l-main">Call to action! It's time!</div>
+                    <div class="l-sub">Sign up for our product by clicking that button right over there!</div>
+
+                </div>
+                <div class="right">
+                <button>Sign up</button>
+                </div>
+            </div>
+
+
+        
+
+
+
+        </div>
+       
 
 
 
 
     </div>
-
 
 
 
