html text for the footer added

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@ this is a placeholder for an image
 
     </div>
 
+    <div class="footer">
+      <div class="bot-text">
+          Copyright © <a href="https://github.com/knayoung/Odin-Landing-Page">Knayoung</a>
+          for The Odin Project 2022 
+      </div>
+      </div>
+
+    </div>
 
 
            
