I added the button in section one, fixed header formatting. I am satisfied with the work I have put into completing this project. I am more comfortable with the use of  flex boxes and how to navigate through nested flex boxes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
      <div class="body-left">
   <div class="hero-main"> This website is awesome</div>
   <div class=" hero-sub"> This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
+  <button class="but">Sign up</button>
 </div>
 
 <div class="empty">
